:bug: Fix bug for nested blocks in left-aligned

--- a/assets/css/scss/editor-style.scss
+++ b/assets/css/scss/editor-style.scss
@@ -94,3 +94,8 @@ p {
 button {
 	overflow: hidden;
 }
+
+.block-editor-block-list__layout .block-editor-block-list__block[data-align="left"] .block-editor-block-list__block-edit .block-editor-block-list__block-edit {
+    float: none;
+    margin-right: inherit;
+}
